public/main.css
/* ... */
body {
    width: 100%;
    height: auto;
    background-color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: bold;
    text-align: center;
}

h1 {
    font-size: 6rem;
    text-align: center;
}

h2 {
    font-size: 3.5rem;
    margin-bottom: 1rem;
}

h3 {
    font-size: 2rem;
    font-weight: 400;
}

#splash {
    height: 100%;
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
}

#splash>h1 {
    font-size: 9rem;
}

main {
    --main-padding: 3rem;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: var(--main-padding);
    position: relative;
}

button {
    max-width: 20rem;
    /*! height: 5rem; */

    /* clear defaults */
    background: none;
    box-shadow: none;
    border: none;

    background-color: var(--gray-bg-color);
    font-size: 2.5rem;
    margin: 2rem 0;
    padding: 1rem 3rem;
}

button:hover,
button:active,
button:focus {
    cursor: pointer;
    background-color: var(--gray-bg-hover);
}

button:focus {
    outline: 5px solid var(--thunk-pink);
}

/* Applies a gray background to the element */
.box-gray {
    background-color: var(--gray-bg-color);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem;
    text-align: center;
}

/* .box-gray * {
    margin: 0;
    text-align: center;
} */

.prompt {
    background-color: var(--gray-bg-color);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem;
    text-align: center;
}

.switch-up-text {
    background-color: var(--gray-bg-color);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1rem;
    text-align: center;
}

.switch-up p {
    text-align: center;
    font-weight: bold;
    font-size: 3rem;
    margin: 2rem 0;
}

.room-code-display {
    position:absolute;
    top:100vh; right: 0;
    transform:translateY(-100%);
    font-size: 1.5rem;
    font-weight: bold;
    display: flex;
    flex-direction: column;
}

.round-progress-bar {
    background-color: var(--gray-bg-color);
    width: 80vw;
    max-width: 60rem;
    height: 3rem;
    padding: 0;
    margin-top: 3em;
}

.timer-bar {
    display: inline-block;
    height: 100%;
    width: 100%;
    background-color: var(--thunk-pink, pink);
}

.round-start-counter {
    --round-counter-size: 4rem;
    background-color: var(--gray-bg-color);
    display: flex;
    align-items: center;
    justify-content: center;
    width: var(--round-counter-size);
    height: var(--round-counter-size);
    border-radius: 50%;
    font-size: 2rem;
    font-weight: bold;
}

.primary {
    width: 90%;
}

.response-select {
    margin: 0 auto;
}

.submitted-responses {
    width: 80%;
    margin: 2rem auto 0;
    display: grid;
    grid-template-columns: repeat(4, 25%);
    grid-gap: 1em;
}

.response {
    background-color: var(--gray-bg-color);
    display: flex;
    align-items: center;
    justify-content: center;
    /*! height: 2rem; */
    font-size: 1.5em;
    text-align: center;
    padding: .5em;
}

label.response {
    display: block;
    position: relative;
    cursor: pointer;
    margin: .5rem auto;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 14rem;
}

  /* Hide browser default checkboxes */
.response input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

.response-checkbox {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: none;
}

.response input:checked ~ .response-checkbox {
    border: 3px solid var(--thunk-pink);
}

input[type=submit] {
    display: block;
    width: 100%;
    margin: 0 auto;

    /* Clear defaults */
    background: none;
    box-shadow: none;
    border: none;

    background-color: var(--gray-bg-color);
    font-size: 2rem;
    padding: .5rem;

    grid-column: 2/4;
}

input[type=submit]:hover, input[type=submit]:active, input[type=submit]:focus {
    outline: 3px solid var(--thunk-pink);
    cursor: pointer;
    background-color: var(--gray-bg-hover);
}

@media screen and (max-width: 40rem) {
    main {
        padding: 2rem;
        height: 100vh;
        overflow-y: hidden;
        position: relative;
    }

    h1 {
        font-size: 2rem;
    }

    .primary {
        overflow-y: scroll;
        width: 100%;
    }

    .switch-up p, .switch-up-text {
        font-size: 1.5rem;
    }

    .submitted-responses {
        display: block;
        width: 100%;
    }

    input[type=submit] {
        width: 80%;
    }
}

/* ! Code from alpha static ------------------------------------ */

/*#instructions {
    max-width: 49.375rem;
}

#instructions>p {
    font-size: 2.75rem;
    line-height: 2;
}

#code,
#prompt {
    /~ min-width: 40rem; ~/
    max-width: 60rem;
}

#code>p {
    font-size: 4.5rem;
    font-weight: bold;
}

#connected-players {
    max-width: 90%;
    height: 17rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.player {
    width: 8rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 1rem;
}

.pl-avi {
    --avi-size: 5.25rem;
    content: "";
    display: block;
    width: var(--avi-size);
    height: var(--avi-size);
    background-color: #000;
    margin-bottom: .25rem;
    border-radius: 50%;
}

/~ ! Remove this once avatar selection feauture is created ~/
#player-1>.pl-avi {
    background-color: var(--pl-red, Red);
}

#player-2>.pl-avi {
    background-color: var(--pl-orange, Orange);
}

#player-3>.pl-avi {
    background-color: var(--pl-yellow, Yellow);
}

#player-4>.pl-avi {
    background-color: var(--pl-green, Green);
}

#player-5>.pl-avi {
    background-color: var(--pl-blue, Blue);
}

#player-6>.pl-avi {
    background-color: var(--pl-mediumBlue, CornflowerBlue);
}
/* ... */

